--- a/rocket.qrc
+++ b/rocket.qrc
@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>engine.wav</file>
+    <file>click00.wav</file>
+    <file>click01.wav</file>
 </qresource>
 </RCC>
