--- a/rocket.qrc
+++ b/rocket.qrc
@@ -3,5 +3,6 @@
     <file>engine.wav</file>
     <file>click00.wav</file>
     <file>click01.wav</file>
+    <file>map.svg</file>
 </qresource>
 </RCC>
