--- a/rocket.qrc
+++ b/rocket.qrc
@@ -4,7 +4,9 @@
     <file>click00.wav</file>
     <file>click01.wav</file>
     <file>map.svg</file>
-    <file>vertex.glsl</file>
-    <file>fragment.glsl</file>
+    <file>main_vertex.glsl</file>
+    <file>main_fragment.glsl</file>
+    <file>base_vertex.glsl</file>
+    <file>base_fragment.glsl</file>
 </qresource>
 </RCC>
