--- a/rocket.qrc
+++ b/rocket.qrc
@@ -9,10 +9,17 @@
 
     <file>main_vertex.glsl</file>
     <file>main_fragment.glsl</file>
+
     <file>base_vertex.glsl</file>
     <file>base_fragment.glsl</file>
+
     <file>particle_geometry.glsl</file>
     <file>particle_vertex.glsl</file>
     <file>particle_fragment.glsl</file>
+
+    <file alias="ball_vertex.glsl">base_vertex.glsl</file>
+    <file>ball_fragment.glsl</file>
+
+
 </qresource>
 </RCC>
