--- a/rocket.qrc
+++ b/rocket.qrc
@@ -7,6 +7,7 @@
     <file>levels.json</file>
     <file>map1.svg</file>
     <file>map2.svg</file>
+    <file>map3.svg</file>
 
     <file>main_vertex.glsl</file>
     <file>main_fragment.glsl</file>
