--- a/rocket.qrc
+++ b/rocket.qrc
@@ -1,28 +1,22 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file>engine.wav</file>
-    <file>click00.wav</file>
-    <file>click01.wav</file>
-
-    <file>levels.json</file>
-    <file>map1.svg</file>
-    <file>map2.svg</file>
-    <file>map3.svg</file>
-    <file>map4.svg</file>
-
-    <file>main_vertex.glsl</file>
-    <file>main_fragment.glsl</file>
-
-    <file>base_vertex.glsl</file>
-    <file>base_fragment.glsl</file>
-
-    <file>particle_geometry.glsl</file>
-    <file>particle_vertex.glsl</file>
-    <file>particle_fragment.glsl</file>
-
-    <file alias="ball_vertex.glsl">base_vertex.glsl</file>
-    <file>ball_fragment.glsl</file>
-
-
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>engine.wav</file>
+        <file>click00.wav</file>
+        <file>click01.wav</file>
+        <file>levels.json</file>
+        <file>map1.svg</file>
+        <file>map2.svg</file>
+        <file>map3.svg</file>
+        <file>map4.svg</file>
+        <file>main_vertex.glsl</file>
+        <file>main_fragment.glsl</file>
+        <file>base_vertex.glsl</file>
+        <file>base_fragment.glsl</file>
+        <file>particle_geometry.glsl</file>
+        <file>particle_vertex.glsl</file>
+        <file>particle_fragment.glsl</file>
+        <file alias="ball_vertex.glsl">base_vertex.glsl</file>
+        <file>ball_fragment.glsl</file>
+        <file>map5.svg</file>
+    </qresource>
 </RCC>
