--- a/rocket.qrc
+++ b/rocket.qrc
@@ -18,5 +18,6 @@
         <file alias="ball_vertex.glsl">base_vertex.glsl</file>
         <file>ball_fragment.glsl</file>
         <file>map5.svg</file>
+        <file>map6.svg</file>
     </qresource>
 </RCC>
