--- a/rocket.qrc
+++ b/rocket.qrc
@@ -20,5 +20,6 @@
         <file>map5.svg</file>
         <file>map6.svg</file>
         <file>map7.svg</file>
+        <file>map8.svg</file>
     </qresource>
 </RCC>
