--- a/data/images/images.qrc
+++ b/data/images/images.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/images">
         <file>logo.png</file>
+        <file>crate_texture.png</file>
     </qresource>
 </RCC>
 
