--- a/data/shaders/shaders.qrc
+++ b/data/shaders/shaders.qrc
@@ -12,6 +12,6 @@
         <file alias="grab_vertex.glsl">base_vertex.glsl</file>
         <file>grab_fragment.glsl</file>
         <file alias="crate_vertex.glsl">base_vertex.glsl</file>
-        <file alias="crate_fragment.glsl">base_fragment.glsl</file>
+        <file>crate_fragment.glsl</file>
     </qresource>
 </RCC>
