--- a/data/images/images.qrc
+++ b/data/images/images.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/images">
         <file>logo.png</file>
-        <file alias="crate_texture.png">debug.png</file>
+        <file>debug.png</file>
+        <file>crate_texture.png</file>
     </qresource>
 </RCC>
 
